// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Description /> should not render if no data is available 1`] = `
<Description
  html={null}
  navigate={[Function]}
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <SurroundPortals
    portalName="PRODUCT_DESCRIPTION"
    portalProps={
      {
        "html": null,
        "navigate": [Function],
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
      }
    }
  >
    <div
      className="tss-15t3g79-container engage__product__description"
    >
      <div
        className="tss-1kw0nvw-title theme__description_heading"
      >
        <Text
          string="product.description_heading"
        >
          product.description_heading
        </Text>
      </div>
      <PlaceholderParagraph
        className="tss-125u37g-placeholder"
        ready={false}
      >
        <div
          className="tss-1lsbam4-content"
          data-test-id="description"
        >
          <HtmlSanitizer
            settings={
              {
                "handleClick": [Function],
                "html": null,
              }
            }
          />
        </div>
      </PlaceholderParagraph>
    </div>
  </SurroundPortals>
</Description>
`;

exports[`<Description /> should render description if data is available 1`] = `
<Description
  html="<h1>foo</h1>"
  navigate={[Function]}
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <SurroundPortals
    portalName="PRODUCT_DESCRIPTION"
    portalProps={
      {
        "html": "<h1>foo</h1>",
        "navigate": [Function],
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
      }
    }
  >
    <div
      className="tss-15t3g79-container engage__product__description"
    >
      <div
        className="tss-1kw0nvw-title theme__description_heading"
      >
        <Text
          string="product.description_heading"
        >
          product.description_heading
        </Text>
      </div>
      <PlaceholderParagraph
        className="tss-125u37g-placeholder"
        ready={true}
      >
        <div
          className="tss-1lsbam4-content"
          data-test-id="description"
        >
          <HtmlSanitizer
            settings={
              {
                "handleClick": [Function],
                "html": "<h1>foo</h1>",
              }
            }
          >
            &lt;h1&gt;foo&lt;/h1&gt;
          </HtmlSanitizer>
        </div>
      </PlaceholderParagraph>
    </div>
  </SurroundPortals>
</Description>
`;
